# marlin

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.mar
ast/: CMakeLists.txt
ast/include/marlin/: ast.hpp
ast/include/marlin/details/: ast.hpp  base.hpp  base.inc.hpp  node.hpp  node.inc.hpp  specs.hpp  subnode_views.hpp  subnodes.hpp  utils.hpp
ast/src/: base.cpp  node.cpp
cli/: CMakeLists.txt  marlin.cpp
cmake/: catch2.cmake  jscutils.cmake
exec/: CMakeLists.txt
exec/include/marlin/: exec.hpp
exec/include/marlin/details/: environment.hpp  errors.hpp  generator.hpp  stacktrace.hpp
exec/src/: stacktrace.cpp
format/: CMakeLists.txt
format/include/marlin/: format.hpp
format/include/marlin/details/: highlight.hpp
lint/: CMakeLists.txt
lint/include/marlin/: lint.hpp
lint/include/marlin/details/: linter.hpp
parse/: CMakeLists.txt
parse/include/marlin/: parse.hpp
parse/include/marlin/details/: errors.hpp  interpreter.hpp  process.hpp  scanner.hpp  token.hpp
parse/src/: infix_builder.hpp  interpreter.cpp  scanner.cpp
test/: CMakeLists.txt
test/ast/: CMakeLists.txt  locate_tests.cpp  misc_tests.cpp  tests.cpp
test/exec/: CMakeLists.txt  exec_tests.cpp  stacktrace_tests.cpp  tests.cpp
test/format/: CMakeLists.txt  highlight_tests.cpp
test/parse/: CMakeLists.txt  file_tests.cpp  numeric_tests.cpp  string_tests.cpp  variable_tests.cpp
